tests/paczka1/fuzzy1/84447043.err
Error in line 12: SCmn A541 47,7
Error in line 13: h3j9U4beQ S223 90,0
Error in line 17: nmHI6ScuY A541 5,1
